# bazel_practice

./: MODULE.bazel  bazel-bazel_practice  bazel-bin  bazel-out  bazel-testlogs  package-lock.json  requirements_lock.txt
frontend/: BUILD.bazel  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
src/: BUILD.bazel  hello.py
