module(
    name = "hello_world_python_bazel_project",
    version = "1.0.0",
)

RULES_PYTHON_VERSION = "3.13"

bazel_dep(name = "rules_python", version = "2.0.1")
bazel_dep(name = "aspect_rules_js", version = "3.1.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = RULES_PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = RULES_PYTHON_VERSION,
    requirements_lock = "//:requirements_lock.txt",
    extra_pip_args = [
        "--index-url", "https://pypi.org/simple"
    ],
)

# 3. EXPLICITLY BRING IT INTO SCOPE (Crucial Line!)
use_repo(pip, "pip")