module(
    name = "hello_world_python_bazel_project",
    version = "1.0.0",
)

RULES_PYTHON_VERSION = "3.13"

bazel_dep(name = "rules_python", version = "2.0.1")
bazel_dep(name = "aspect_rules_js", version = "3.1.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = RULES_PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = RULES_PYTHON_VERSION,
    requirements_lock = "//:requirements_lock.txt",
    extra_pip_args = [
        "--index-url", "https://pypi.org/simple"
    ],
)

# 3. EXPLICITLY BRING IT INTO SCOPE (Crucial Line!)
use_repo(pip, "pip")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")

# FIX: Notice the colon is placed right after the root slashes!
# MODULE.bazel

npm.npm_translate_lock(
    name = "npm",
    # FIX: Keep the package label mapped to the frontend package directory
    pnpm_lock = "//frontend:pnpm-lock.yaml", 
)

use_repo(npm, "npm")